--- a/www/index.html
+++ b/www/index.html
@@ -52,10 +52,46 @@
             <a href="tel:+32493672687">Bel mij!</a></p>
     </div>
     <div class="row cooleDiv spa" id="tabWhoStart">
-        <p>Filler</p>
+        <div class="row omgekeerd">
+            <div class="col s6 m6">
+                <input id="muntI" type="image" src="img/tails.png" class="tails">
+                <p id="muntP">Druk op de munt!</p>
+            </div>
+            <div class="col s6 m6">
+                <div id="d1" class="dobbel">0</div>
+                <button class="dobbelsteen">Rol dobbelsteen</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s6 m6">
+                <input id="muntI2" type="image" src="img/tails.png" class="tails2">
+                <p id="muntP2">Druk op de munt!</p>
+            </div>
+            <div class="col s6 m6">
+                <div id="d2" class="dobbel">0</div>
+                <button class="dobbelsteen2">Rol dobbelsteen</button>
+            </div>
+        </div>
     </div>
     <div class="row cooleDiv spa" id="tabLifePoints">
-        <p>Filler</p>
+        <div class="omgekeerd">
+            <h2 class="hCenter" id="labelLP1">8000</h2>
+            <div class="hCenter">
+                <input type="textbox" id="txtLP1" name="txtLP1" class="orange-text">
+                <a class="waves-effect waves-light btn-small btnLP1">Confirm</a>
+            </div>
+        </div>
+        <div class="">
+            <h2 class="hCenter" id="labelLP2">8000</h2>
+            <div class="hCenter">
+                <input type="textbox" id="txtLP2" name="txtLP1" class="orange-text">
+                <a class="waves-effect waves-light btn-small btnLP2">Confirm</a>
+            </div>
+            <br> <br>
+            <div class="hCenter">
+                <a class="waves-effect waves-light btn-small btnReset">Reset LP</a>
+            </div>
+        </div>
     </div>
     <div class="row cooleDiv spa" id="tabCardSearch">
         <h3>Zoek een kaart: </h3>
