--- a/www/index.html
+++ b/www/index.html
@@ -78,14 +78,16 @@
             <h2 class="hCenter" id="labelLP1">8000</h2>
             <div class="hCenter">
                 <input type="textbox" id="txtLP1" name="txtLP1" class="orange-text">
-                <a class="waves-effect waves-light btn-small btnLP1">Confirm</a>
+                <a class="waves-effect waves-light btn-small btnLPA1">+</a>
+                <a class="waves-effect waves-light btn-small btnLPM1">-</a>
             </div>
         </div>
         <div class="">
             <h2 class="hCenter" id="labelLP2">8000</h2>
             <div class="hCenter">
-                <input type="textbox" id="txtLP2" name="txtLP1" class="orange-text">
-                <a class="waves-effect waves-light btn-small btnLP2">Confirm</a>
+                <input type="textbox" id="txtLP2" name="txtLP2" class="orange-text">
+                <a class="waves-effect waves-light btn-small btnLPA2">+</a>
+                <a class="waves-effect waves-light btn-small btnLPM2">-</a>
             </div>
             <br> <br>
             <div class="hCenter">
