--- a/www/index.html
+++ b/www/index.html
@@ -73,7 +73,7 @@
             </div>
         </div>
     </div>
-    <div class="row cooleDiv spa" id="tabLifePoints">
+    <div class="row cooleDiv spa centerDiv" id="tabLifePoints">
         <div class="omgekeerd">
             <h2 class="hCenter" id="labelLP1">8000</h2>
             <div class="hCenter">
